# bountynet-genesis

./: CONSTITUTION.md  Cargo.toml  Dockerfile  INVARIANT.md  README.md  arch_diagrams.md  entrypoint.sh  registry.json
.github/workflows/: attested-self-build.yml  build-attested-runner.yml  test-attestation.yml  update-registry.yml
contracts/: AttestRegistry.vy  TeeGated.vy  UpdateChallenge.vy
deploy/: azure-cvm.sh  gcp-tdx.sh
docs/: index.html
docs/assets/: app.js  style.css  verify.js
src/: compat.rs  integrity.rs  lib.rs  main.rs  registry.rs
src/attest/: mod.rs
src/quote/: eat.rs  mod.rs  roots.rs  value_x.rs  verify.rs
src/tee/: detect.rs  mod.rs  nitro.rs  snp.rs  tdx.rs
stage0/: build-attested.sh
testdata/: snp_attestation.json
tests/: integration_nitro.rs  integration_snp.rs  integration_tdx.rs  integration_value_x.rs
v2/: .gitignore  BOOTSTRAP.md  BUILD.md  Cargo.toml  DESIGN.md  HARDWARE_VALIDATION.md  SHADOW.md  STAGES.md
v2/action/: action.yml
v2/registry/: README.md
v2/src/: eat.rs  lib.rs  main.rs  registry.rs  value_x.rs
v2/src/net/: acme.rs  attested_tls.rs  ct.rs  mod.rs  tls.rs  vsock.rs
v2/src/quote/: verify.rs
v2/src/tee/: detect.rs  kds.rs  mod.rs  nitro.rs  snp.rs  tdx.rs  tpm.rs
v2/testdata/: attestation_payload.json  tdx_attestation.json
v2/tests/: attested_tls_e2e.rs  attested_tls_live.rs  chain_e2e.rs  eat_kms_e2e.rs  hardware_regression.rs
