[package]
name = "bountynet-shim"
version = "0.1.0"
edition = "2021"
description = "Attestation shim for GitHub Actions runners in TEEs"

[features]
default = ["nitro", "sev-snp", "tdx"]
nitro = ["dep:ciborium", "dep:coset", "dep:serde_cbor"]
sev-snp = ["dep:p384"]
tdx = ["dep:p256", "dep:base64"]
# Future: sgx (backport from tdx)

[dependencies]
# Core
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
serde_with = { version = "3", features = ["hex"] }

# Attestation endpoint
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["limit"] }

# Nitro (COSE/CBOR for attestation doc parsing)
ciborium = { version = "0.2", optional = true }
coset = { version = "0.3", optional = true }
serde_cbor = { version = "0.11", optional = true }

# Crypto verification (ECDSA for platform quote signatures)
p384 = { version = "0.13", features = ["ecdsa"], optional = true }
p256 = { version = "0.13", features = ["ecdsa"], optional = true }
ecdsa = { version = "0.16", features = ["verifying"] }
x509-cert = { version = "0.2", features = ["std"] }
der = { version = "0.7", features = ["std"] }
spki = "0.7"

# PEM parsing for TDX cert chains
base64 = { version = "0.22", optional = true }

# For TEE device ioctls
nix = { version = "0.29", features = ["ioctl"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
